large refactor into modules; added grain-maven-plugin to support easier project configuration; minor teaks here and there